fixing projects height on iphone

--- a/src/static/styles/homepage/work.css
+++ b/src/static/styles/homepage/work.css
@@ -30,8 +30,8 @@
     margin: 3% 4%;
   }
   .project img {
-    max-width: 90%;
-    height: 10%;
+    max-width: 300px;
+    max-height: 400px;
     border: 3px dashed black;
   }
 }
